compiler/tests/fixtures/invalid/semantics/search_domain_prohibited_policy.viv
// Invalid: search domain uses prohibited policy for construct type

action fight:
    roles:
        @combatant:
            as: initiator

query recent-fights:
    roles:
        @witness:
            as: character
    action:
        any: fight

action searcher:
    roles:
        @actor:
            as: initiator
    conditions:
        search query recent-fights:
            with partial:
                @witness: @actor
            over: inherit
